--- a/Customer-Service/src/main/resources/application.properties
+++ b/Customer-Service/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.application.name=Customer-Service
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=false
 server.port=8081
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:customer-db
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:9999
+
+
