--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=account-service
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=false
 server.port=8082
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:account-db
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:9999
