--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=config-service
+server.port=9999
+spring.cloud.discovery.enabled=true
+#spring.cloud.config.server.git.uri=file:///C:/Users/youssef/IdeaProjects/Micro-Service/config-repo
+spring.cloud.config.server.git.uri=https://github.com/Khadirayoussef/Bank-account-config-repo
